--- a/upload-endpoint/Cargo.toml
+++ b/upload-endpoint/Cargo.toml
@@ -8,3 +8,4 @@ axum = {version = "0.8.1", features = ["multipart"]}
 clap = {version = "4", features = ["derive"]}
 reqwest = {version = "0.12.14", features = ["multipart"]}
 tokio = {version = "1.35.0", features = ["full"]}
+file-uploader = {path = "../file-uploader"}
