--- a/file-uploader/Cargo.toml
+++ b/file-uploader/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-structopt ="0.3"
-# upload-endpoint = { path = "../upload-endpoint" }
-tokio = { version = "1", features = ["full"] } 
-clap = { version = "4", features = ["derive"] } 
-reqwest = { version = "0.12.14", features = ["multipart"] }
+reqwest = { version = "0.11", features = ["multipart"] }
+tokio = { version = "1", features = ["full"] }
+pbr = "1.0.4"
