--- a/file-uploader/Cargo.toml
+++ b/file-uploader/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 reqwest = { version = "0.11", features = ["multipart"] }
 tokio = { version = "1", features = ["full"] }
 pbr = "1.0.4"
+
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros"] }
+dotenvy = "0.15.7"
