--- a/upload-endpoint/Cargo.toml
+++ b/upload-endpoint/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 axum = {version = "0.7", features = ["multipart"]}
-dotenvy = "0.15.7"
+dotenv = "0.15.0"
 flate2 = "1"
 serde = {version = "*", features = ["derive"]}
 serde_json = "1.0"
