--- a/upload-endpoint/Cargo.toml
+++ b/upload-endpoint/Cargo.toml
@@ -4,7 +4,7 @@ name = "upload-endpoint"
 version = "0.1.0"
 
 [dependencies]
-axum = {version = "0.7", features = ["multipart"]}
+axum = {version = "0.8.3", features = ["multipart"]}
 dotenv = "0.15.0"
 flate2 = "1"
 serde = {version = "*", features = ["derive"]}
@@ -12,6 +12,8 @@ serde_json = "1.0"
 sqlx = {version = "0.8.3", features = ["postgres", "runtime-tokio", "macros", "migrate"]}
 tokio = {version = "1", features = ["full"]}
 tower-http = {version = "0.6.2", features = ["fs", "trace"]}
+utoipa = {version = "5.3.1", features = ["axum_extras"]}
+utoipa-swagger-ui = {version = "9.0.1", features = ["axum"]}
 
 [lib]
 path = "../file-compression/src/lib.rs"
